--- a/templates/add_form.html
+++ b/templates/add_form.html
@@ -1,40 +1,54 @@
-{% macro render_field(field) %}
-    {{ field.label }}{{ field }}
-    <div class="error">
-        {% for error in field.errors %}
-            {{ error }}
-        {%- endfor %}
-    </div>
-{% endmacro %}
-
-<form method="post">
+<form v-on:submit.prevent="create_book" id="new_book">
     <div class="row">
         <div class="three columns">
-            {{ render_field(add_book_form.author) }}
+            <label for="author">Автор</label>
+            <input type="text" name="author" v-model="new_book.author">
+            <div class="error" v-show="new_book_errors.author">
+                [[ new_book_errors.author ]]
+            </div>
         </div>
 
         <div class="seven columns">
-            {{ render_field(add_book_form.title) }}
+            <label for="title">Название</label>
+            <input type="text" name="title" v-model="new_book.title">
+            <div class="error" v-show="new_book_errors.title">
+                [[ new_book_errors.title ]]
+            </div>
         </div>
 
         <div class="two columns">
-            {{ render_field(add_book_form.pages_number) }}
+            <label for="pages_number">Число страниц</label>
+            <input type="integer" name="pages_number" v-model="new_book.pages_number">
+            <div class="error" v-show="new_book_errors.pages_number">
+                [[ new_book_errors.pages_number ]]
+            </div>
         </div>
     </div>
 
     <div class="row">
         <div class="three columns">
-            {{ render_field(add_book_form.date_start) }}
+            <label for="date_start">Дата начала чтения</label>
+            <input type="date" name="date_start" v-model="new_book.date_start">
+            <div class="error" v-show="new_book_errors.date_start">
+                [[ new_book_errors.date_start ]]
+            </div>
         </div>
         <div class="three columns">
-            {{ render_field(add_book_form.date_end) }}
+            <label for="date_end">Дата окончания чтения</label>
+            <input type="date" name="date_end" v-model="new_book.date_end">
+            <div class="error" v-show="new_book_errors.date_end">
+                [[ new_book_errors.date_end ]]
+            </div>
         </div>
     </div>
 
     <div class="row">
-        {{ render_field(add_book_form.comment) }}
+        <label for="comment">Комментарий</label>
+        <textarea name="comment" rows="5" v-model="new_book.comment"></textarea>
+        <div class="error" v-show="new_book_errors.comment">
+            [[ new_book_errors.comment ]]
+        </div>
     </div>
 
-    {{ add_book_form.csrf_token }}
     <input type="submit" value="Добавить">
 </form>
