--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <link rel="stylesheet" href="/static/custom.css">
+    <script src="https://unpkg.com/vue"></script>
+    <script src="https://unpkg.com/axios"></script>
+    {% block head %}{% endblock %}
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-<div class="container">
+<div class="container" id="app">
     {% block body %}{% endblock %}
 </div>
+{% block script %}{% endblock %}
 </body>
 </html>
