--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,26 @@
   <link rel="stylesheet" href="/static/custom.css">
   <script src="https://unpkg.com/vue"></script>
   <script src="https://unpkg.com/axios"></script>
+  <style>
+    header ul {
+      list-style: none;
+    }
+    header li {
+      display: inline-block;
+      margin-right: 2rem;
+    }
+  </style>
   {% block head %}{% endblock %}
   <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
 <div class="container" id="app">
+  <header>
+    <ul>
+      <li><h5><a href="/">Книги</a></h5></li>
+      <li><h5><a href="/stats">Статистика</a></h5></li>
+    </ul>
+  </header>
   {% block body %}{% endblock %}
 </div>
 {% block script %}{% endblock %}
