Add form to edit books

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
   <script src="https://unpkg.com/vue"></script>
   <script src="https://unpkg.com/axios"></script>
+  <script src="https://unpkg.com/lodash"></script>
   <style>
     header ul {
       list-style: none;
