--- a/templates/books_list.html
+++ b/templates/books_list.html
@@ -25,7 +25,7 @@
       <button v-on:click="show_edit_form=true; edited_book=book">
         <i class="fas fa-edit"></i>
       </button>
-      <button v-on:click="delete_book(book.id)">
+      <button v-on:click="delete_book(book)">
         <i class="fas fa-ban"></i>
       </button>
     </td>
