--- a/templates/stats.html
+++ b/templates/stats.html
@@ -11,26 +11,36 @@
 {% endblock %}
 
 {% block body %}
-  {% for (year, grouped_by_month) in grouped %}
+  {% for books_by_year in grouped %}
     <table>
-      <caption><h5>{{ year }}</h5></caption>
+      <caption><h5>{{ books_by_year.year }}</h5></caption>
       <thead>
         <tr>
           <th>Месяц</th><th>Число книг</th><th>Число страниц</th>
         </tr>
       </thead>
-      {% for grouped_item in grouped_by_month %}
+      {% for books_by_month in books_by_year.books_by_month %}
         <tr>
-          <td>{{ grouped_item.month|readable_month }}</td>
-          <td>{{ grouped_item.data|length }}</td>
-          <td>{{ grouped_item.pages_sum }}</td>
+          <td>{{ books_by_month.month|readable_month }}</td>
+          <td>{{ books_by_month.stats.count }}</td>
+          <td>{{ books_by_month.stats.pages }}</td>
         </tr>
       {% endfor %}
       <tfoot>
         <tr>
           <td>Всего</td>
-          <td>{{ grouped_by_month|sum(attribute='books_number') }}</td>
-          <td>{{ grouped_by_month|sum(attribute='pages_sum') }}</td>
+          <td>{{ books_by_year.stats.count }}</td>
+          <td>{{ books_by_year.stats.pages }}</td>
+        </tr>
+        <tr>
+          <td>Полезных</td>
+          <td>{{ books_by_year.helpful_stats.count }}</td>
+          <td>{{ books_by_year.helpful_stats.pages }} ({{ books_by_year.helpful_stats.pages_percent }}%)</td>
+        </tr>
+        <tr>
+          <td>Английских</td>
+          <td>{{ books_by_year.english_stats.count }}</td>
+          <td>{{ books_by_year.english_stats.pages }} ({{ books_by_year.english_stats.pages_percent }}%)</td>
         </tr>
       </tfoot>
     </table>
