Add link to book in google search

--- a/templates/books_list.html
+++ b/templates/books_list.html
@@ -11,7 +11,11 @@
   </tr>
   <tr v-for="book in books">
     <td>[[ book.author ]]</td>
-    <td>[[ book.title ]]</td>
+    <td>
+      <a v-bind:href="'https://www.google.com/search?q=книга' + ' ' + book.title + ' ' + book.author">
+        [[ book.title ]]
+      </a>
+    </td>
     <td>[[ book.pages_number ]]</td>
     <td>
       <span v-if="book.date_start">[[ book.date_start ]]</span>
