--- a/static/rating.css
+++ b/static/rating.css
@@ -9,6 +9,7 @@ h1 { font-size: 1.5em; margin: 10px; }
 .rating {
   border: none;
   float: left;
+  font-size: 10px;
 }
 
 .rating > input { display: none; }
