--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="/static/custom.css">
   <link rel="stylesheet" href="/static/rating.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
-  <script src="https://unpkg.com/vue"></script>
-  <script src="https://unpkg.com/axios"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.global.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <style>
     header ul {
       list-style: none;
